ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: initialother-ingress
  namespace: initialother
spec:
  rules:
    - host: initialother-ui.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: initialother-backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: initialother-frontend-service
                port:
                  number: 80
